style: fix testimonal spacing

--- a/components/testimonials/testimonialList.module.css
+++ b/components/testimonials/testimonialList.module.css
@@ -5,6 +5,7 @@
   /* background-color: var(--white); */
   z-index: 1;
   width: 100%;
+  padding: 1rem;
   /* max-width: 600px; */
   margin: 0 auto;
 }
